apps/base/media/radarr/radarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://radarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Radarr"
    gethomepage.dev/description: "Movie organizer/manager"
    gethomepage.dev/app: radarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "sh-radarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`radarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: radarr
          port: 7878
  tls: {}
